--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <link rel="icon" type="image/jpg" href="./public/djfav.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dev Augusto</title>
-  </head>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollToPlugin.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>  
+</head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
